# Tibetan-STR-Dataset

TibSTR-Former/: README.md  ablation_study.py  cnn_model.py  data_loader.py  dataset.py  metrics_paper.py  model_v0.py  model_v1.py  model_v2.py  model_v3.py  model_v4.py  ocr_transforms.py  quick_backbone_attention_ablation.py  requirements.txt  test.py  tibetan_vocab_optimized.txt  train_complete.py
TibSTR-Former/debug_test/: check_invalid_chars.py  debug_decode.py  debug_model.py  test_augmentation.py  test_char_coverage.py  test_metrics.py  test_new_dataset.py  test_tibetan_specific.py
tibetan/: cnn_model.py  data_char_analysis.py  data_loader.py  data_split_from_result2k.py  detect.py  detect_evaluate.py  gen_word.py  model_v0.py  model_v1.py  model_v2.py  model_v3.py  model_v4.py  ocr_transforms.py  pyproject.toml  simple_cnn_model.py  simple_rnn_model.py  tibetan_vocab.txt  tibetan_vocab_full.txt  tibetan_vocab_optimized.txt  train.py  train_all_models.py  train_fixed.py
tibetan/debug_test/: check_invalid_chars.py  debug_ctc.py  debug_decode.py  debug_image_paths.py  debug_model.py  debug_train.py  debug_vocab_fix.py  quick_train_test.py  simple_test_metrics.py  test_augmentation.py  test_char_coverage.py  test_fixes.py  test_metrics.py  test_new_dataset.py  test_tibetan_specific.py  test_train.py
tibetan/results/: base_results.npy
